--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@commitlint/config-conventional": "^9.1.2",
     "eslint": "^7.0.0",
     "husky": "^4.0.7",
+    "netlify-plugin-snyk": "^1.1.1",
     "prettier": "^2.0.0"
   },
   "dependencies": {},
