--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,10 @@
 [build]
   command = "echo 'no op'"
   publish = "public"
+  functions = "functions"
 
   [build.environment]
     YARN_FLAGS = "--frozen-lockfile"
-    YARN_VERSION = "1.22.4"
-    NODE_VERSION = "12"
+    YARN_VERSION = "1.22.5"
+    NODE_VERSION = "14"
     
-[[plugins]]
-package = "@netlify/plugin-sitemap"
