--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "prettier": "^2.0.0"
   },
   "dependencies": {
-    "@netlify/plugin-sitemap": "^0.5.1"
+    "@netlify/plugin-sitemap": "^0.5.1",
+    "jspdf": "^2.1.1",
+    "nodemailer": "^6.4.14",
+    "nodemailer-mailgun-transport": "^2.0.1"
   },
   "husky": {
     "hooks": {
