test: add unofficial plugin

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,3 +13,6 @@ package = "@netlify/plugin-sitemap"
 
 [[plugins]]
 package = "./plugins/local.js"
+
+[[plugins]]
+package = "netlify-plugin-cache"
