chore: add lighthouse plugin

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,9 @@ publish = "public"
 
 [build.environment]
 NODE_VERSION = "15"
+
+[[plugins]]
+package = "@netlify/plugin-lighthouse"
+
+[plugins.inputs]
+output_path = "reports/lighthouse.html"
