--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.0.0",
     "husky": "^4.0.7",
+    "netlify-plugin-a11y": "^0.0.12",
     "prettier": "^2.0.0"
   },
   "husky": {
