chore: update action

--- a/.github/workflows/fix-cancelled.yml
+++ b/.github/workflows/fix-cancelled.yml
@@ -1,6 +1,11 @@
 name: Update status
 
-on: status
+on:
+  - status
+  - check_run
+  - check_suite
+  - deployment
+  - deployment_status
 
 jobs:
   build:
