--- a/.github/workflows/fix-cancelled.yml
+++ b/.github/workflows/fix-cancelled.yml
@@ -7,12 +7,7 @@ jobs:
   set-status:
     runs-on: ubuntu-latest
     steps:
-      - name: Print event data
-        env:
-          GITHUB_EVENT: ${{ toJSON(github.event) }}
-        run: |
-          echo "$GITHUB_EVENT"
-      # - uses: ouzi-dev/commit-status-updater@v1.1.0
-      #   if: ''
-      #   with:
-      #     status: 'success'
+      - uses: ouzi-dev/commit-status-updater@v1.1.0
+        if: contains(github.event.description, 'Deploy Preview canceled')
+        with:
+          status: 'success'
