--- a/.github/workflows/fix-cancelled.yml
+++ b/.github/workflows/fix-cancelled.yml
@@ -7,7 +7,12 @@ jobs:
   set-status:
     runs-on: ubuntu-latest
     steps:
-      - uses: ouzi-dev/commit-status-updater@v1.1.0
+      - name: update status
         if: contains(github.event.description, 'Deploy Preview canceled')
-        with:
-          status: 'success'
+        run: |
+          curl --request POST \
+          --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.event.sha }} \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --data '{"state":"success"}' \
+          --fail
